<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.agentassert4j</groupId>
        <artifactId>agentassert4j-parent</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>
    <artifactId>agentassert4j-cli</artifactId>
    <name>AgentAssert4j CLI</name>
    <dependencies>
        <dependency>
            <groupId>io.github.agentassert4j</groupId>
            <artifactId>agentassert4j-core</artifactId>
        </dependency>
        <dependency>
            <groupId>io.github.agentassert4j</groupId>
            <artifactId>agentassert4j-recorder</artifactId>
        </dependency>
        <dependency>
            <groupId>io.github.agentassert4j</groupId>
            <artifactId>agentassert4j-storage-sqlite</artifactId>
        </dependency>
        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>8</release>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
